--- a/WHUdailyreport.css
+++ b/WHUdailyreport.css
@@ -108,4 +108,6 @@
     transform: translateX(-50%);
     color:rgb(0,162,65) ;
     font-size: 9vw;
+    font-family: SimHei;
+    font-weight: 600;
 }
